# LEX-DISCOVERY--MULTI-SOURCE-LEGAL-DISCOVERY-GRAPH

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  chainlit.md  chainlit_app.py  pyproject.toml
.chainlit/: config.toml
.github/workflows/: deploy.yml
configs/: config.yaml
lex_discovery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/system/: cross_context_v1.md  lead_attorney_v1.md  timeline_extractor_v1.md
scripts/: ingest.py  visualise_graph.py
src/: config.py
src/api/: __init__.py  auth.py  main.py  routes.py  schemas.py
src/core/: exceptions.py  llamaindex_setup.py  llm_factory.py  logging.py  prompt_manager.py  tracing.py
src/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/graph/subgraphs/: __init__.py  case_law.py  client_files.py
src/ingestion/: __init__.py  llamaindex_pipeline.py
src/tools/: knowledge_base.py
src/vectordb/: __init__.py  llamaindex_qdrant.py  qdrant_store.py
tests/: conftest.py
tests/integration/: test_graph_integration.py  test_hitl.py
tests/unit/: test_knowledge_base.py  test_nodes.py  test_qdrant_store.py  test_state.py
