[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lex-discovery"
version = "1.0.0"
description = "Multi-Source Legal Discovery Graph — LangGraph + FastAPI + Qdrant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["legal", "discovery", "langgraph", "qdrant", "fastapi", "rag"]

dependencies = [
  # Core LangGraph / LangChain
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-huggingface>=0.1.0",

  # FastAPI stack
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "slowapi>=0.1.9",
  "python-multipart>=0.0.9",

  # Chainlit UI
  "chainlit>=1.3.0",

  # Config
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0",

  # Observability
  "structlog>=24.0.0",
  "langsmith>=0.1.0",

  # SQLite async checkpointer
  "aiosqlite>=0.20.0",
  "langgraph-checkpoint-sqlite>=2.0.0",

  # Vector store — Qdrant Cloud
  "qdrant-client>=1.9.0",

  # LlamaIndex core + Qdrant + fastembed
  "llama-index-core>=0.12.0",
  "llama-index-vector-stores-qdrant>=0.4.0",
  "llama-index-embeddings-fastembed>=0.3.0",
  "fastembed>=0.4.0",

  # LlamaIndex LLMs
  "llama-index-llms-huggingface-api>=0.3.0",

  # Ingestion
  "llama-index-readers-file>=0.2.0",
]

[project.optional-dependencies]
ingestion = [
  "llama-index-core>=0.11.0",
  "llama-index-readers-file>=0.2.0",
  "llama-index-embeddings-huggingface>=0.3.0",
  "llama-index-llms-google-genai>=0.3.0",
  "torch",
  "transformers",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration tests (require GOOGLE_API_KEY)",
  "e2e: marks tests as end-to-end browser tests (require playwright)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RET", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
